# python-poetry-text-stats

./: .gitignore  README.md  pyproject.toml  tox.ini
src/text_stats/: cli.py  stats.py
tests/: test_stats.py
