[tool.poetry]
name = "text-stats"
version = "0.1.0"
description = "Python CLI to display simple text statistics"
authors = ["Oleksii Shevtsov <alex.shevtsov1988@gmail.com>"]
readme = "README.md"
packages = [{include = "text_stats", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
text-stats = "text_stats.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
